# MidiBackend

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: MidiManager.h  main.cpp
src/Midi/: Midi.h  mididevice.cpp  mididevice.h  midimanager.cpp  midimanager.h  midimessage.cpp  midimessage.h
src/core/: mididevice.cpp  midimanager.cpp  midimessage.cpp
src/core/audio/: audioengine.h
src/core/midi/: mididevice.cpp  mididevice.h  midimanager.cpp  midimanager.h  midimessage.cpp  midimessage.h
